# htslib

./: .gitignore  CMakeLists.txt  README
config/: CMakeLists.txt  config.h.in  version.h  version.h.in
core/: CMakeLists.txt
